changes in language

--- a/StudioTahara/about-us.html
+++ b/StudioTahara/about-us.html
@@ -71,7 +71,7 @@ Menu
 <li class="ttr_menu_items_parent dropdown"><a href="index.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Home</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown active"><a href="about-us.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Our Team</a>
+<li class="ttr_menu_items_parent dropdown active"><a href="about-us.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>About Us</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
 <li class="ttr_menu_items_parent dropdown"><a href="new-page.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
@@ -94,19 +94,8 @@ Menu
 <div class="post_column col-lg-6 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_about-us_html_column00">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.49142857142857;"><span style="font-weight:500;font-size:2.571em;">スタジオTAHARAとは</span></h2><p style="margin:1.43em 0em 0em 0em;line-height:1.99142857142857;"><span style="color:rgba(78,78,78,1);">いづれの御時にか、女御、更衣あまたさぶらひたまひけるなかに、いと
-   やむごとなき際にはあらぬが、すぐれて時めきたまふありけり。
-   はじめより我はと思ひ上がりたまへる御方がた、めざましきものにおと
-   のためしにもなりぬべき御もてなしなり。</span></p><p style="margin:1.43em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">人の心をのみ動かし</span><span style="font-weight:500;font-size:1.286em;">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">
-      あかずあはれなるものに思ほして、人のそしりをもえ憚らせたまはず、世
-      やありけむ、いと篤しくなりゆき、もの心細げに里がちなるを、いよいよ
-      ず。朝夕の宮仕へにつけても、人の心をのみ動かし、恨みを負ふ積もりに
-      しめ嫉みたまふ。同じほど、それより下臈の更衣たちは、ましてやすから
-      上達部、上人なども、あいなく目を側めつつ、 「いとまばゆき人の御おぼ
-      なき御心ばへのたぐひなきを頼みにてまじらひたまふ。父の大納言は亡くなりて、母北の方なむいにしへの人のよしあるにて、親
-      後見しなければ、事ある時は、なほ拠り所なく心細げなり。
-      ず、なにごとの儀式をももてなしたまひけれど、とりたててはかばかしき
-      うち具し、さしあたりて世のおぼえはなやかなる御方がたにもいたう劣ら</span><span style="color:rgba(105,105,105,1);">.</span></p></div>
+<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.49142857142857;"><span style="font-weight:500;font-size:2.571em;">Who are We?</span></h2><p style="margin:1.43em 0em 0em 0em;line-height:1.99142857142857;"><span style="color:rgba(78,78,78,1);">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p><p style="margin:1.43em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">To Capture the Motions of the Heart</span><span style="font-weight:500;font-size:1.286em;">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">
+   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span><span style="color:rgba(105,105,105,1);">.</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
