--- a/StudioTahara/index.html
+++ b/StudioTahara/index.html
@@ -73,13 +73,13 @@ Menu
 <li class="ttr_menu_items_parent dropdown active"><a href="index.html" class="ttr_menu_items_parent_link_active"><span class="menuchildicon"></span>Home</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Our Team</a>
+<li class="ttr_menu_items_parent dropdown"><a href="about-us.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>About Us</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
 <li class="ttr_menu_items_parent dropdown"><a href="new-page.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Gallery</a>
 <hr class ="horiz_separator"/>
 </li> <!-- main menu list closing -->
-<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact</a>
+<li class="ttr_menu_items_parent dropdown"><a href="contact.html" class="ttr_menu_items_parent_link"><span class="menuchildicon"></span>Contact Us</a>
 </li> <!-- main menu list closing -->
 </ul>
 </div>
@@ -140,7 +140,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column01">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="margin:0.14em 0em 0em 0.57em;text-align:Center;line-height:1.99142857142857;"><span style="color:rgba(105,105,105,1);">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vivamus at augue eget arcu dictum varius duis. Massa tincidunt dui ut ornare lectus sit. Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit. Bibendum est ultricies integer quis auctor elit sed vulputate mi. Vestibulum lorem sed risus ultricies tristique nulla aliquet. Egestas sed sed risus pretium quam. Nunc non blandit massa enim nec dui nunc mattis. Nulla pellentesque dignissim enim sit amet. Consequat id porta nibh venenatis cras sed. Enim nec dui nunc mattis. Pharetra convallis posuere morbi leo urna. Enim nulla aliquet porttitor lacus luctus accumsan tortor. Sit amet risus nullam eget felis eget. Et netus et malesuada fames ac turpis egestas integer. Scelerisque eu ultrices vitae auctor eu augue ut lectus. Magna etiam tempor orci eu lobortis elementum. Maecenas accumsan lacus vel facilisis volutpat est. Eget arcu dictum varius duis at consectetur lorem.</span></p></div>
+<div class="html_content"><p style="margin:0.14em 0em 0em 0.57em;text-align:Center;line-height:1.99142857142857;"><span style="color:rgba(105,105,105,1);">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -151,7 +151,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column10">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;"><span style="font-weight:500;font-size:2.571em;">Latest Artwork</span></p></div>
+<div class="html_content"><p style="text-align:Center;"><span style="font-weight:500;font-size:2.571em;">Our Newest Work</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -207,7 +207,7 @@ Menu
 <div class="post_column col-lg-6 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column16">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1821.jpg" /></span></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 0em 0em;"><span><img class="ttr_uniform" style="max-height:450px;max-width:800px;" src="images/1820.jpg" /></span></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -268,7 +268,7 @@ Menu
 <div class="post_column col-lg-12 col-md-12 col-sm-12 col-xs-12">
 <div class="ttr_index_html_column30">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">Check Out Our Blog</span></p></div>
+<div class="html_content"><p style="text-align:Center;line-height:1.57142857142857;"><span style="font-weight:500;font-size:2.571em;">Our Blog</span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -277,7 +277,7 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column31">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1803.jpg" /></span></span><span style="font-weight:500;font-size:1.286em;">いい写真とは？</span><span style="font-weight:500;font-size:1.286em;"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">先の世にも御契りや深かりけむ、世になく清らなる玉の男御子さへ生ま に、めづらかなる稚児の御容貌なり。 れたまひぬ。いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、</span><span style="color:rgba(105,105,105,1);"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></h2></div>
+<div class="html_content"><h2 style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1803.jpg" /></span></span><span style="font-weight:500;font-size:1.286em;">What Makes a Good Photo？</span><span style="font-weight:500;font-size:1.286em;"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span><span style="color:rgba(105,105,105,1);"></span></h2><h2 style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></h2></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -286,9 +286,9 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column32">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1817.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">
-写真家必要アイテムトップ５
-</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">いつしかと心もとながらせたまひて、急ぎ参らせて御覧ずる 一の皇子は、右大臣の女御の御腹にて、寄せ重く、疑ひなき儲の君と、世 かしづきたまふこと限りなし。 ければ、おほかたのやむごとなき御思ひにて、この君をば、私物に思ほし</span><span style="color:rgba(105,105,105,1);"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span style="line-height:1.57142857142857;"><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/oceana.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">
+Top 5 Tools for Photography
+</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span><span style="color:rgba(105,105,105,1);"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
@@ -297,8 +297,8 @@ Menu
 <div class="post_column col-lg-4 col-md-6 col-sm-6 col-xs-12">
 <div class="ttr_index_html_column33">
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
-<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1805.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">Editor's Voice
-</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);"></span><span style="color:rgba(105,105,105,1);">　Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
+<div class="html_content"><p><span class="ttr_image" style="float:Left;overflow:hidden;margin:0em 0em 1.43em 0em;"><span><img class="ttr_uniform" style="max-height:300px;max-width:450px;" src="images/1805.jpg" /></span></span></p><p style="margin:0.14em 0em 0em 0em;line-height:1.57142857142857;"><span style="font-weight:500;font-size:1.286em;">Editor's voice
+</span><span style="font-weight:500;font-size:1.286em;"></span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span style="color:rgba(105,105,105,1);">A</span><span style="color:rgba(105,105,105,1);">dipiscing elit.Nullam dignissim convallis est.Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui.Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula</span><span style="color:rgba(105,105,105,1);">.</span></p><p style="margin:0.71em 0em 0em 0em;line-height:1.97142857142857;"><span><a href="" target="_self" class="btn btn-md btn-default">Read More</a></span></p></div>
 <div style="height:0px;width:0px;overflow:hidden;-webkit-margin-top-collapse: separate;"></div>
 <div style="clear:both;"></div>
 </div>
